--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         console.log(payments, "payments");
 
         const card = await payments.card();
-        console.log(cards, "cards");
+        console.log(card, "cards");
 
         await card.attach("#card-container");
 
