--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             const result = await card.tokenize();
 
             if (result.status === "OK") {
-              console.log(`Payment token is ${result.token}`);
+              console.log(`Payment token is ${result}`);
             }
           } catch (e) {
             console.error(e);
